--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pylint
         pip install .
+        pip install -e '.[dev]'
     - name: Lint with pylint
       run: |
         pylint life_expectancy.cleaning
