update python-package.yml file to include pylint of the added modules and tests

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,6 +33,11 @@ jobs:
     - name: Lint with pylint
       run: |
         pylint life_expectancy.cleaning
+        pylint life_expectancy.load_save_data
+        pylint life_expectancy.main
+        pylint life_expectancy.tests.test_cleaning
+        pylint life_expectancy.tests.test_main
+        pylint life_expectancy.tests.test_load_save_data
     - name: Test with pytest
       run: |
         pytest life_expectancy --cov
